force-app/main/default/objects/Agreement_Recognition__c/Agreement_Recognition__c.object-meta.xml
<CustomObject>
    <description>External institution agreement recognition e.g., external program or profession.</description>
    <label>Agreement Recognition</label>
    <nameField>
        <label>Agreement Recognition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Recognitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>