force-app/main/default/objects/Agreement_Recognition__c/fields/Academic_Validation_Required__c.field-meta.xml
<CustomField>
    <fullName>Academic_Validation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determine if the individual achievement created requires validation.</description>
    <label>Academic Validation Required</label>
    <type>Checkbox</type>
</CustomField>