force-app/main/default/objects/Agreement_Recognition__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <label>Agreement</label>
    <referenceTo>Agreement__c</referenceTo>
    <relationshipLabel>Agreement Recognitions</relationshipLabel>
    <relationshipName>Agreement_Recognitions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>