force-app/main/default/objects/Agreement_Recognition__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Identifier code.</description>
    <inlineHelpText>Identifier code.</inlineHelpText>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>