force-app/main/default/objects/Agreement_Recognition__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agreement Recognitions</relationshipLabel>
    <relationshipName>Agreement_Recognitions</relationshipName>
    <type>Lookup</type>
</CustomField>