force-app/main/default/objects/Agreement_Recognition__c/fields/Field_of_Study__c.field-meta.xml
<CustomField>
    <fullName>Field_of_Study__c</fullName>
    <label>Field of Study</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Field_of_Study</valueSetName>
    </valueSet>
</CustomField>