force-app/main/default/objects/Agreement_Recognition__c/fields/From_Date__c.field-meta.xml
<CustomField>
    <fullName>From_Date__c</fullName>
    <description>The from/start date of the recognition.</description>
    <inlineHelpText>The from/start date of the recognition.</inlineHelpText>
    <label>From Date</label>
    <type>Date</type>
</CustomField>