force-app/main/default/objects/Agreement_Recognition__c/fields/To_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Date__c</fullName>
    <description>The to/end date of the recognition.</description>
    <inlineHelpText>The to/end date of the recognition.</inlineHelpText>
    <label>To Date</label>
    <type>Date</type>
</CustomField>