force-app/main/default/objects/Agreement_Recognition__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academic</fullName>
                <default>true</default>
                <label>Academic</label>
            </value>
            <value>
                <fullName>Professional Experience</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>